[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4" # add a logging backend in your project

futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
warp = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nanoid = "0.4.0"
nanorand = "0.6.1"

urlencoding = "2.1.0"